# cf_ddns

./: Cargo.toml  README.md  cf_ddns.service
.github/workflows/: armv7.yml  build-release.yml  rust.yml
src/: api_client.rs  configuration.rs  lib.rs  main.rs  utils.rs
