[package]
name = "cf_ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
colored = "2"
config = "0.13.3"
reqwest = { version = "0.11.14", features = ["json"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
